<resources>
    <string name="app_name">AbsensiWifi</string>
    <string name="absensi">Absensi</string>
    <string name="nik_label">NIK</string>
    <string name="password_label">Password</string>
    <string name="login">Login</string>
    <string name="company_label">PT. DINUS CIPTA MANDIRI</string>
    <string name="absen">Absen</string>
    <string name="sync">Sync GPS</string>
    <string name="absen_masuk">Absen Masuk</string>
    <string name="absen_keluar">Absen Keluar</string>
    <string name="history">History</string>
    <string name="tampil">Tampil</string>
    <string name="profile">Profile</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="kirim">Kirim</string>
</resources>
