<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgprimary"
    tools:context=".AbsenAct">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:background="@color/bluePrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/absen"
        android:textStyle="bold"
        android:textFontWeight="2"
        android:textAlignment="center"
        android:textColor="@color/whitePrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:src="@drawable/icback_white"
        app:layout_constraintEnd_toStartOf="@+id/txtName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/btn_sync"
        android:layout_width="326dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="30dp"
        android:paddingRight="24dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName">

        <ImageView
            android:id="@+id/btn_sync"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:src="@drawable/icgps_colored" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/mmedium"
            android:text="@string/sync"
            android:textColor="@color/blackPrimary"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_masuk"
        android:layout_width="336dp"
        android:layout_height="118dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:focusable="true"
        android:gravity="left"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sync">

        <ImageView
            android:id="@+id/btn_absen_masuk"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:clickable="false"
            android:paddingLeft="40dp"
            android:src="@drawable/icmasuk_colored" />

        <TextView
            android:id="@+id/txt_btn_masuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:fontFamily="@font/mmedium"
            android:paddingLeft="10dp"
            android:text="@string/absen_masuk"
            android:textColor="@color/blackPrimary"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_keluar"
        android:layout_width="336dp"
        android:layout_height="118dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:gravity="right"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_masuk">

        <TextView
            android:id="@+id/txt_btn_keluar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/mmedium"
            android:paddingRight="10dp"
            android:text="@string/absen_keluar"
            android:textColor="@color/blackPrimary"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/btn_absen_keluar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:paddingRight="40dp"
            android:src="@drawable/ickeluar_colored" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/mlight"
        android:text="@string/company_label"
        android:textColor="@color/bluePrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_keluar" />

</android.support.constraint.ConstraintLayout>