<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgprimary"
    tools:context=".HistoryAct">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:background="@color/bluePrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/history"
        android:textStyle="bold"
        android:textFontWeight="2"
        android:textAlignment="center"
        android:textColor="@color/whitePrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:src="@drawable/icback_white"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="326dp"
        android:layout_height="168dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/bg_layout_white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="20dp"
                android:fontFamily="@font/mmedium"
                android:text="Nik"
                android:textColor="@color/grayprimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:fontFamily="@font/mmedium"
                android:paddingLeft="100dp"
                android:text="10115906"
                android:textColor="@color/blackPrimary"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="20dp"
                android:fontFamily="@font/mmedium"
                android:text="Nama"
                android:textColor="@color/grayprimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:fontFamily="@font/mmedium"
                android:paddingLeft="100dp"
                android:text="Abdu Rachman Ruchendar"
                android:textColor="@color/blackPrimary"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="20dp"
                android:fontFamily="@font/mmedium"
                android:text="Hari/ \nTanggal"
                android:textColor="@color/grayprimary" />

            <EditText
                android:id="@+id/date"
                android:layout_width="85dp"
                android:layout_height="40dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="-35dp"
                android:background="@drawable/bg_input_dua"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-35dp"
                android:layout_marginLeft="190dp"
                android:fontFamily="@font/mmedium"
                android:text="s/d"
                android:textColor="@color/grayprimary"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/date_to"
                android:layout_width="85dp"
                android:layout_height="40dp"
                android:layout_marginLeft="230dp"
                android:layout_marginTop="-35dp"
                android:background="@drawable/bg_input_dua"/>

            <Button
                android:id="@+id/show_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:text="@string/tampil"
                android:textColor="@color/whitePrimary"
                android:background="@drawable/bg_btn_blue_primary" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/bg_layout_white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mmedium"
                android:text="Hari/Tanggal"
                android:textColor="@color/blackPrimary"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="-20dp"
                android:fontFamily="@font/mmedium"
                android:text="Masuk"
                android:textColor="@color/blackPrimary"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="230dp"
                android:layout_marginTop="-20dp"
                android:fontFamily="@font/mmedium"
                android:text="Keluar"
                android:textColor="@color/blackPrimary"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="Keterangan"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/grayprimary"/>

            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_btn_green" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tepat Waktu"
                android:textStyle="bold"
                android:textColor="@color/blackPrimary"
                android:layout_marginTop="-20dp"
                android:layout_marginLeft="50dp"/>

            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_btn_red" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tidak Tepat Waktu"
                android:textStyle="bold"
                android:textColor="@color/blackPrimary"
                android:layout_marginTop="-20dp"
                android:layout_marginLeft="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" -"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/blackPrimary"
                android:layout_marginLeft="23dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tidak Masuk"
                android:textStyle="bold"
                android:textColor="@color/blackPrimary"
                android:layout_marginTop="-20dp"
                android:layout_marginLeft="50dp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/mlight"
        android:text="@string/company_label"
        android:textColor="@color/bluePrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />" />
</android.support.constraint.ConstraintLayout>